--- a/css/style.css
+++ b/css/style.css
@@ -62,7 +62,7 @@ header .navbar-brand{padding: 0;}
 .cnt-user-info{padding: 40px;background: #fff;border-radius: 20px;-webkit-box-shadow: 0px 0px 6px 0px rgba(0,0,0,0.10);-moz-box-shadow: 0px 0px 6px 0px rgba(0,0,0,0.10);box-shadow: 0px 0px 6px 0px rgba(0,0,0,0.10);width: 550px;margin: 0 auto;}
 .cnt-user-info button{margin:0 auto;width: 190px;display: block;margin-top: 25px;}
 .cnt-user-info label{font-size: 16px;color: #b8c1cb;font-weight: 400;}
-.cnt-user-info input, .cnt-user-info select{border:1px solid #d3dce6;border-radius: 3px;height: 52px;box-shadow: 0 0 0;font-size: 18px;color: #000a12;font-weight: 400;padding-right: 42px;}
+.cnt-user-info input, .cnt-user-info select, .custon-modal input.form-control, .cnt-form-tw select{border:1px solid #d3dce6;border-radius: 3px;height: 52px;box-shadow: 0 0 0;font-size: 18px;color: #000a12;font-weight: 400;padding-right: 42px;}
 .cnt-input{position: relative;}
 .cnt-input .glyphicon{position: absolute;top: 15px;right: 10px;font-size: 25px;color: #ccc;}
 .cnt-input .ico-success{color: #13cb65;}
@@ -83,6 +83,39 @@ header .navbar-brand{padding: 0;}
 .btn-belcorp{height: 50px;border:0;border-radius: 25px;background: #0078e8;padding: 0;text-align: center;color: #fff;font-size: 21px;}
 .btn-belcorp:hover, .btn-belcorp:active, .btn-belcorp:focus{color: #fff;opacity: 0.9;}
 .inner-login form button{width: 100%;}
+/*Modal*/
+.custon-modal .modal-dialog{width: 550px;}
+.modal-backdrop.in{opacity: 0;}
+.custon-modal .modal-content{border:0;border-radius: 15px;padding: 40px;}
+.cnt-logo-m{margin-bottom: 20px;}
+.custon-on h3{margin-bottom: 12px;font-size: 23px;color: #363636;font-weight: 400;margin-top: 0;}
+.custon-on p{margin-bottom: 30px;font-size: 19px;color: #4a4a4a;line-height: 130%;font-weight: 400;}
+.custon-modal .btn-belcorp{width: 190px;margin: 0 auto;display: block;line-height: 50px;}
+.custon-modal .star-ico{position: absolute;top: 15px;right: 15px;font-size: 20px;color: #009dff;}
+.line-v{margin-left: -40px;margin-right: -40px;height: 2px;background: #cecece;margin-top: 30px;margin-bottom: 30px;}
+.custon-modal p.desc{font-size: 21px;color: #363636;font-weight: 700;line-height: 120%;margin-bottom: 15px;}
+.text-custom-ch{text-align: center;margin-bottom: 20px;}
+.text-custom-ch label{font-size: 13px;color: #4a4a4a;}
+.text-custom-ch label a{text-decoration: underline;color: #4a4a4a;}
+p.m-text{font-size: 19px;color: #9b9b9b;margin-bottom: 20px;}
+.cnt-form-on .form-group, .cnt-form-tw .form-group{margin-bottom: 25px;}
+.cnt-form-on label{display: block;text-align: center;font-size: 19px;color: #4a4a4a;margin-bottom: 20px;}
+.cnt-form-on input{text-align: center;}
+.cnt-form-tw  .form-group>label{font-size: 16px;color: #b8c1cb;font-weight: 400;}
+.list-change{position: relative;margin-bottom: 25px;}
+.list-change p{font-size: 23px;color: #363636;line-height: 110%;padding-right: 205px;margin-bottom: 0;}
+.list-change .btn-belcorp{position: absolute;top: 0;right: 0}
+.cnt-cu-pre{margin-bottom: 25px;}
+.inner-cu-pre{position: relative;margin-bottom: 5px;}
+.inner-cu-pre p{font-size: 23px;color: #363636;padding-right: 100px;margin-bottom: 0;}
+.inner-cu-pre>span{font-size: 23px;color: #363636;position: absolute;top: 2px;right: 0;}
+.cnt-puntos-es{margin-bottom: 25px;}
+.cnt-puntos-es p{text-align: center;font-size: 23px;color: #363636;margin-bottom: 16px;}
+.cnt-puntos-es input{width: 210px;margin: 0 auto;}
+.margin-b-r{margin-bottom: 0;}
+.cnt-cont-uso{margin-bottom: 30px;}
+.cnt-cont-uso h3{margin-top: 0;margin-bottom: 5px;color: #363636;font-size: 23px;font-weight: 700;}
+.cnt-cont-uso p{line-height: 130%;font-size: 13px;color: #9b9b9b;}
 /*Footer*/
 footer{background: #000;padding: 50px 0;}
 .bloque-f h4{margin-top: 0;margin-bottom: 25px;color: #fff;font-size: 19px;font-weight: 600;}
