--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,55 @@
-body{font-family: Arial;font-size: 12px;font-weight: 400;}
+@font-face {
+    font-family: 'proxima_nova_semibold';
+    src: url('../fonts/ProximaNovaSemibold.eot');
+    src: url('../fonts/ProximaNovaSemibold.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/ProximaNovaSemibold.woff2') format('woff2'),
+         url('../fonts/ProximaNovaSemibold.woff') format('woff'),
+         url('../fonts/ProximaNovaSemibold.ttf') format('truetype'),
+         url('../fonts/ProximaNovaSemibold.svg#proxima_nova_ltsemibold') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
+}
+@font-face {
+    font-family: 'proxima_nova_thin';
+    src: url('../fonts/ProximaNovaThin.eot');
+    src: url('../fonts/ProximaNovaThin.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/ProximaNovaThin.woff2') format('woff2'),
+         url('../fonts/ProximaNovaThin.woff') format('woff'),
+         url('../fonts/ProximaNovaThin.ttf') format('truetype'),
+         url('../fonts/ProximaNovaThin.svg#proxima_nova_ltthin') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+@font-face {
+    font-family: 'AkkuratLightRegular';
+    src: url('../fonts/AkkuratLightRegular.eot');
+    src: url('../fonts/AkkuratLightRegular.eot') format('embedded-opentype'),
+         url('../fonts/AkkuratLightRegular.woff2') format('woff2'),
+         url('../fonts/AkkuratLightRegular.woff') format('woff'),
+         url('../fonts/AkkuratLightRegular.ttf') format('truetype'),
+         url('../fonts/AkkuratLightRegular.svg#AkkuratLightRegular') format('svg');
+}
+@font-face {
+    font-family: 'AkkuratRegular';
+    src: url('../fonts/AkkuratRegular.eot');
+    src: url('../fonts/AkkuratRegular.eot') format('embedded-opentype'),
+         url('../fonts/AkkuratRegular.woff2') format('woff2'),
+         url('../fonts/AkkuratRegular.woff') format('woff'),
+         url('../fonts/AkkuratRegular.ttf') format('truetype'),
+         url('../fonts/AkkuratRegular.svg#AkkuratRegular') format('svg');
+}
+@font-face {
+    font-family: 'AkkuratBold';
+    src: url('../fonts/AkkuratBold.eot');
+    src: url('../fonts/AkkuratBold.eot') format('embedded-opentype'),
+         url('../fonts/AkkuratBold.woff2') format('woff2'),
+         url('../fonts/AkkuratBold.woff') format('woff'),
+         url('../fonts/AkkuratBold.ttf') format('truetype'),
+         url('../fonts/AkkuratBold.svg#AkkuratBold') format('svg');
+}
+
+body{font-family: "AkkuratRegular", Arial;font-size: 12px;font-weight: 400;}
 .fluid-list{width: 100%;display: inline-block;vertical-align: top;}
 .reset-ul{list-style: none;padding-left: 0;margin-bottom: 0;}
 .left{float: left;}
@@ -17,11 +68,11 @@ header .navbar-brand{padding: 0;}
 /*Section*/
 .wrapper{padding: 15px 0;}
 .item-category{margin-bottom: 20px;}
-.item-category>span{display: inline-block;vertical-align: middle;margin-right: 55px;font-size: 17px;color: #4a4a4a;font-weight: 700;margin-left: 12px;}
+.item-category>span{display: inline-block;vertical-align: middle;margin-right: 55px;font-size: 17px;color: #4a4a4a;margin-left: 12px;font-family: "AkkuratBold", arial;}
 .item-category ul{display: inline-block;vertical-align: middle;}
 .item-category ul li{float: left;margin-right: 45px;}
 .item-category ul li:last-child{margin-right: 0;}
-.item-category ul li a{display: block;font-size: 17px;color: #9b9b9b;font-weight: 400;}
+.item-category ul li a{display: block;font-size: 17px;color: #9b9b9b;font-family: "AkkuratLightRegular", arial;}
 .cnt-productos>.row{margin-left: -8px;margin-right: -8px;}
 .cnt-productos>.row>.col-md-4{padding-left: 8px;padding-right: 8px;}
 .item-product{padding: 25px;background: #fff;border-radius: 20px;-webkit-box-shadow: 0px 0px 6px 0px rgba(0,0,0,0.10);-moz-box-shadow: 0px 0px 6px 0px rgba(0,0,0,0.10);box-shadow: 0px 0px 6px 0px rgba(0,0,0,0.10);overflow: hidden;margin-bottom: 16px;}
@@ -56,8 +107,8 @@ header .navbar-brand{padding: 0;}
 .user-nav{margin-bottom: 15px;}
 .user-nav ul{text-align: center;}
 .user-nav ul li{display: inline-block;margin-left: 33px;margin-right: 33px;}
-.user-nav ul li a{color: #9b9b9b;font-size: 21px;font-weight: 400px;}
-.user-nav ul li a.active{color: #363636;}
+.user-nav ul li a{color: #9b9b9b;font-size: 21px;font-weight: 400;}
+.user-nav ul li a.active{color: #363636;font-family: "AkkuratBold", arial;}
 .user-nav ul li a:hover, .user-nav ul li a:active, .user-nav ul li a:focus{text-decoration: none;}
 .cnt-user-info{padding: 40px;background: #fff;border-radius: 20px;-webkit-box-shadow: 0px 0px 6px 0px rgba(0,0,0,0.10);-moz-box-shadow: 0px 0px 6px 0px rgba(0,0,0,0.10);box-shadow: 0px 0px 6px 0px rgba(0,0,0,0.10);width: 550px;margin: 0 auto;}
 .cnt-user-info button{margin:0 auto;width: 190px;display: block;margin-top: 25px;}
@@ -69,14 +120,14 @@ header .navbar-brand{padding: 0;}
 .cnt-puntos{padding: 40px;background: #fff;border-radius: 20px;-webkit-box-shadow: 0px 0px 6px 0px rgba(0,0,0,0.10);-moz-box-shadow: 0px 0px 6px 0px rgba(0,0,0,0.10);box-shadow: 0px 0px 6px 0px rgba(0,0,0,0.10);}
 .cnt-filter-s{margin-bottom: 15px;}
 .cnt-filter-s select{width: 280px;border:1px solid #d3dce6;border-radius: 3px;height: 52px;box-shadow: 0 0 0;font-size: 18px;color: #000a12;font-weight: 400;margin: 0 auto;}
-.cnt-puntos table thead tr th{color: #4a4a4a;font-size: 19px;font-weight: 700;}
+.cnt-puntos table thead tr th{color: #4a4a4a;font-size: 19px;font-family: "AkkuratBold", arial;}
 .cnt-puntos table tbody tr td{font-size: 18px;color: #9b9b9b;font-weight: 400;padding: 10px;}
 /*404*/
 .cnt-ups{text-align: center;padding-top: 80px;padding-bottom: 300px;}
-.cnt-ups p{font-size: 29px;color: #000000;font-weight: 400;margin-bottom: 0;}
+.cnt-ups p{font-size: 29px;color: #000000;font-weight: 400;margin-bottom: 0;font-family: "AkkuratBold", arial;}
 /*login*/
 .main-login{padding-top: 110px;padding-bottom: 270px;background: url(../img/bg-login.jpg) no-repeat;background-size: cover;background-position: center center;}
-.inner-login p{margin-bottom: 80px;font-size: 23px;color: #fff;text-align: center;text-shadow: 1px 2px 1px rgba(0,0,0,0.8);}
+.inner-login p{margin-bottom: 80px;font-size: 23px;color: #fff;text-align: center;text-shadow: 1px 2px 1px rgba(0,0,0,0.8);font-family: "AkkuratBold", arial;}
 .inner-login form{width: 430px;margin: 0 auto;}
 .inner-login form input{height: 50px;border-radius: 3px;border:0;}
 .inner-login form .form-group{margin-bottom: 25px;}
@@ -85,18 +136,18 @@ header .navbar-brand{padding: 0;}
 .inner-login form button{width: 100%;}
 /*Modal*/
 .custon-modal .modal-dialog{width: 550px;}
-.modal-backdrop.in{opacity: 0;}
+.modal-backdrop.in{opacity: 0.5;}
 .custon-modal .modal-content{border:0;border-radius: 15px;padding: 40px;}
 .cnt-logo-m{margin-bottom: 20px;}
 .custon-on h3{margin-bottom: 12px;font-size: 23px;color: #363636;font-weight: 400;margin-top: 0;}
-.custon-on p{margin-bottom: 30px;font-size: 19px;color: #4a4a4a;line-height: 130%;font-weight: 400;}
+.custon-on p{margin-bottom: 30px;font-size: 21px;color: #4a4a4a;line-height: 130%;font-family: "AkkuratBold", arial;}
 .custon-modal .btn-belcorp{width: 190px;margin: 0 auto;display: block;line-height: 50px;}
 .custon-modal .star-ico{position: absolute;top: 15px;right: 15px;font-size: 20px;color: #009dff;}
 .line-v{margin-left: -40px;margin-right: -40px;height: 2px;background: #cecece;margin-top: 30px;margin-bottom: 30px;}
-.custon-modal p.desc{font-size: 21px;color: #363636;font-weight: 700;line-height: 120%;margin-bottom: 15px;}
+.custon-modal p.desc{font-size: 21px;color: #363636;font-weight: 700;line-height: 120%;margin-bottom: 15px;font-family: "AkkuratBold", arial;}
 .text-custom-ch{text-align: center;margin-bottom: 20px;}
-.text-custom-ch label{font-size: 13px;color: #4a4a4a;}
-.text-custom-ch label a{text-decoration: underline;color: #4a4a4a;}
+.text-custom-ch label{font-size: 13px;color: #4a4a4a;font-family: "AkkuratLightRegular", arial;}
+.text-custom-ch label a{text-decoration: underline;color: #4a4a4a;font-family: "AkkuratLightRegular", arial;}
 p.m-text{font-size: 19px;color: #9b9b9b;margin-bottom: 20px;}
 .cnt-form-on .form-group, .cnt-form-tw .form-group{margin-bottom: 25px;}
 .cnt-form-on label{display: block;text-align: center;font-size: 19px;color: #4a4a4a;margin-bottom: 20px;}
@@ -110,14 +161,19 @@ p.m-text{font-size: 19px;color: #9b9b9b;margin-bottom: 20px;}
 .inner-cu-pre p{font-size: 23px;color: #363636;padding-right: 100px;margin-bottom: 0;}
 .inner-cu-pre>span{font-size: 23px;color: #363636;position: absolute;top: 2px;right: 0;}
 .cnt-puntos-es{margin-bottom: 25px;}
-.cnt-puntos-es p{text-align: center;font-size: 23px;color: #363636;margin-bottom: 16px;}
+.cnt-puntos-es p{text-align: center;font-size: 23px;color: #363636;margin-bottom: 16px;font-family: "AkkuratBold", arial;}
 .cnt-puntos-es input{width: 210px;margin: 0 auto;}
 .margin-b-r{margin-bottom: 0;}
 .cnt-cont-uso{margin-bottom: 30px;}
 .cnt-cont-uso h3{margin-top: 0;margin-bottom: 5px;color: #363636;font-size: 23px;font-weight: 700;}
 .cnt-cont-uso p{line-height: 130%;font-size: 13px;color: #9b9b9b;}
+/*search*/
+.search-custon{margin-right: 15px;position: relative;}
+.search-custon input{border: 1px solid #d8d8d8;padding-left: 40px;border-radius: 5px;width: 250px;margin-top: 15px;height: 40px;}
+.search-custon button{position: absolute;left: 10px;top: 7px;background: none;border: 0;outline: 0;padding: 0;}
+.search-custon button span{font-size: 25px;}
 /*Footer*/
 footer{background: #000;padding: 50px 0;}
-.bloque-f h4{margin-top: 0;margin-bottom: 25px;color: #fff;font-size: 19px;font-weight: 600;}
+.bloque-f h4{margin-top: 0;margin-bottom: 25px;color: #fff;font-size: 19px;font-family: "proxima_nova_semibold", arial;}
 .bloque-f ul li{margin-bottom: 20px;}
-.bloque-f ul li a,.bloque-f ul li{display: block;color: #fff;font-size: 19px;}
+.bloque-f ul li a,.bloque-f ul li{display: block;color: #fff;font-size: 19px;font-family: "proxima_nova_thin", arial;}
