--- a/css/style.css
+++ b/css/style.css
@@ -65,6 +65,11 @@ header .navbar-brand{padding: 0;}
 .user-list .dropdown-menu>li>a{color: #4a4a4a;font-size: 17px;font-weight: 400;padding: 3px 15px;}
 .cnt-city{height: 40px;width: 250px;border:1px solid #d8d8d8;border-radius: 3px;float: left;margin-top: 15px;padding: 10px 8px;font-size: 17px;color: #4a4a4a;line-height: 100%;}
 .cnt-city>span{width: 17px;height: 17px;background: url(../img/ico-city.png) no-repeat;background-size: 100% 100%;margin-right: 5px;display: inline-block;vertical-align: top;}
+.custom-nav-bar.navbar-default .navbar-toggle{border-color:transparent;}
+.list-menu-m{display: none;padding: 15px 5px;}
+.list-menu-m li{margin-bottom: 8px;}
+.list-menu-m li a{font-size: 16px;color: #000;font-family: "AkkuratLightRegular", arial;display: block;}
+.list-menu-m li:last-child{margin-bottom: 0;}
 /*Section*/
 .wrapper{padding: 15px 0;}
 .item-category{margin-bottom: 12px;position: relative;}
@@ -186,7 +191,7 @@ footer{background: #000;padding: 50px 0;}
 @media only screen and (max-width: 992px){
     /*Display none provicional*/
     .cnt-city{display: none;}
-    .search-custon{display: none;}
+    .nav-search-f{display: none;}
     /**/
 }
 @media only screen and (max-width: 768px){
@@ -198,6 +203,12 @@ footer{background: #000;padding: 50px 0;}
     .body-cupon{width: 100%;}
     .cnt-user-info{width: 100%;}
     .custon-modal .modal-dialog{width: auto;}
+    .custom-nav-bar .navbar-brand>img{width: 140px;}
+    .custom-nav-bar .collapse.in{border-bottom: 1px solid #ddd;}
+    header{height: 50px;}
+    header nav{min-height: 50px!important;}
+    .list-menu-m{display: block;}
+    .user-list{display: none;}
 }
 @media only screen and (max-width: 600px){
     .inner-login form{width: 100%;}
