--- a/css/style.css
+++ b/css/style.css
@@ -219,4 +219,6 @@ footer{background: #000;padding: 50px 0;}
     .cnt-filter-s select{width: 100%;}
     .cnt-puntos{padding: 20px;}
     .cnt-user-info{padding: 20px;}
+    .custon-modal .modal-content{padding: 40px 15px;}
+    .line-v{margin-left: -15px;margin-right: -15px;}
 }
