--- a/css/style.css
+++ b/css/style.css
@@ -221,4 +221,6 @@ footer{background: #000;padding: 50px 0;}
     .cnt-user-info{padding: 20px;}
     .custon-modal .modal-content{padding: 40px 15px;}
     .line-v{margin-left: -15px;margin-right: -15px;}
+    .list-change p{margin-bottom: 15px;padding-right: 0;}
+    .list-change .btn-belcorp{position: static;margin-bottom: 20px;}
 }
