--- a/css/style.css
+++ b/css/style.css
@@ -48,7 +48,126 @@
          url('../fonts/AkkuratBold.ttf') format('truetype'),
          url('../fonts/AkkuratBold.svg#AkkuratBold') format('svg');
 }
+/* Slider */
+.slick-slider
+{
+    position: relative;
 
+    display: block;
+
+    -moz-box-sizing: border-box;
+         box-sizing: border-box;
+
+    -webkit-user-select: none;
+       -moz-user-select: none;
+        -ms-user-select: none;
+            user-select: none;
+
+    -webkit-touch-callout: none;
+    -khtml-user-select: none;
+    -ms-touch-action: pan-y;
+        touch-action: pan-y;
+    -webkit-tap-highlight-color: transparent;
+}
+
+.slick-list
+{
+    position: relative;
+
+    display: block;
+    overflow: hidden;
+
+    margin: 0;
+    padding: 0;
+}
+.slick-list:focus
+{
+    outline: none;
+}
+.slick-list.dragging
+{
+    cursor: pointer;
+    cursor: hand;
+}
+
+.slick-slider .slick-track,
+.slick-slider .slick-list
+{
+    -webkit-transform: translate3d(0, 0, 0);
+       -moz-transform: translate3d(0, 0, 0);
+        -ms-transform: translate3d(0, 0, 0);
+         -o-transform: translate3d(0, 0, 0);
+            transform: translate3d(0, 0, 0);
+}
+
+.slick-track
+{
+    position: relative;
+    top: 0;
+    left: 0;
+
+    display: block;
+}
+.slick-track:before,
+.slick-track:after
+{
+    display: table;
+
+    content: '';
+}
+.slick-track:after
+{
+    clear: both;
+}
+.slick-loading .slick-track
+{
+    visibility: hidden;
+}
+
+.slick-slide
+{
+    display: none;
+    float: left;
+
+    height: 100%;
+    min-height: 1px;
+}
+[dir='rtl'] .slick-slide
+{
+    float: right;
+}
+.slick-slide img
+{
+    display: block;
+}
+.slick-slide.slick-loading img
+{
+    display: none;
+}
+.slick-slide.dragging img
+{
+    pointer-events: none;
+}
+.slick-initialized .slick-slide
+{
+    display: block;
+}
+.slick-loading .slick-slide
+{
+    visibility: hidden;
+}
+.slick-vertical .slick-slide
+{
+    display: block;
+
+    height: auto;
+
+    border: 1px solid transparent;
+}
+.slick-arrow.slick-hidden {
+    display: none;
+}
+/*End slider*/
 body{font-family: "AkkuratRegular", Arial;font-size: 12px;font-weight: 400;}
 .fluid-list{width: 100%;display: inline-block;vertical-align: top;}
 .reset-ul{list-style: none;padding-left: 0;margin-bottom: 0;}
@@ -70,6 +189,17 @@ header .navbar-brand{padding: 0;}
 .list-menu-m li{margin-bottom: 8px;}
 .list-menu-m li a{font-size: 16px;color: #000;font-family: "AkkuratLightRegular", arial;display: block;}
 .list-menu-m li:last-child{margin-bottom: 0;}
+/*Slider*/
+.slider-home{background: #fff;overflow: hidden;border-radius: 5px 5px 0 0;margin-bottom: 40px;}
+.box-sombra{-webkit-box-shadow: 0 8px 1px 0 rgba(0,0,0,.25);-moz-box-shadow: 0 8px 1px 0 rgba(0,0,0,.25);box-shadow: 0 8px 1px 0 rgba(0,0,0,.25);}
+.sombra-interna{padding: 15px;-webkit-box-shadow: inset 0 0 10px 0 rgba(0,0,0,.1);-moz-box-shadow: inset 0 0 10px 0 rgba(0,0,0,.1);box-shadow: inset 0 0 10px 0 rgba(0,0,0,.1);}
+.box-sombra-caja{-webkit-box-shadow: 0 0 4px 0 rgba(0,0,0,.25);-moz-box-shadow: 0 0 4px 0 rgba(0,0,0,.25);box-shadow: 0 0 4px 0 rgba(0,0,0,.25);}
+.slider-promocion .slick-arrow{width: 21px;height: 42px;background: 0 0;border: none;text-indent: -99999px;position: absolute;z-index: 9;top: 50%;margin-top: -21px;outline: 0;}
+.slider-promocion .slick-prev{background: url(../img/left.png) no-repeat;left: -15px;}
+.slider-promocion .slick-next{background: url(../img/right.png) no-repeat;right: -16px;}
+.slider-promocion a{position: relative;}
+.slider-promocion a{display: block;outline: 0;}
+.slider-promocion a img{width: 100%;}
 /*Section*/
 .wrapper{padding: 15px 0;}
 .item-category{margin-bottom: 12px;position: relative;}
@@ -83,13 +213,18 @@ header .navbar-brand{padding: 0;}
 .item-category ul li a:hover, .item-category ul li a:active, .item-category ul li a:focus{text-decoration: none;}
 .cnt-productos>.row{margin-left: -8px;margin-right: -8px;}
 .cnt-productos>.row>.col-md-4{padding-left: 8px;padding-right: 8px;}
-.item-product{padding: 25px;background: #fff;border-radius: 20px;-webkit-box-shadow: 0px 0px 6px 0px rgba(0,0,0,0.10);-moz-box-shadow: 0px 0px 6px 0px rgba(0,0,0,0.10);box-shadow: 0px 0px 6px 0px rgba(0,0,0,0.10);overflow: hidden;margin-bottom: 16px;}
-.item-product h2{margin-top: 0;margin-bottom: 12px;height: 25px;overflow: hidden;}
+.item-product{padding: 20px;background: #fff;border-radius: 20px;-webkit-box-shadow: 0px 0px 6px 0px rgba(0,0,0,0.10);-moz-box-shadow: 0px 0px 6px 0px rgba(0,0,0,0.10);box-shadow: 0px 0px 6px 0px rgba(0,0,0,0.10);overflow: hidden;margin-bottom: 16px;}
+.item-product h2{margin-top: 0;margin-bottom: 12px;}
 .item-product h2 a{display: block;font-size: 23px;color: #363636;font-weight: 400;}
-.item-product p{line-height: 130%;font-size: 13px;color: #9b9b9b;font-weight: 400;margin-bottom: 28px;height: 32px;overflow: hidden;}
-.item-product figure{margin-left: -25px;margin-right: -25px;margin-bottom: -25px;}
+.item-product p{line-height: 130%;font-size: 13px;color: #9b9b9b;font-weight: 400;margin-bottom: 30px;height: 32px;overflow: hidden;}
+.item-product figure{margin-left: -20px;margin-right: -20px;margin-bottom: -20px;}
+.item-product figure a{display: block;}
 .item-product figure img{width: 100%;}
-.item-product .b-prec{font-size: 23px;color: #363636;font-weight: 400;margin-bottom: 15px;line-height: 100%;height: 23px;overflow: hidden;}
+.item-product .b-prec{margin-bottom: 15px;}
+.item-product .b-prec em{font-size: 15px;color: #363636;font-weight: 400;line-height: 100%;font-style: normal;}
+.item-product .b-prec em span{font-size: 20px;}
+.item-product .b-prec em span.p-bef{font-size: 15px;text-decoration:line-through;}
+.item-product .btn-belcorp{padding: 0 45px;font-size: 18px;height: 40px;line-height: 40px;margin-top: -13px;}
 /*Cupon*/
 .b-cupon .wrapper{padding: 0;}
 .header-cupon{padding: 60px 0;min-height: 400px;}
@@ -142,7 +277,7 @@ header .navbar-brand{padding: 0;}
 .inner-login form{width: 430px;margin: 0 auto;}
 .inner-login form input{height: 50px;border-radius: 3px;border:0;}
 .inner-login form .form-group{margin-bottom: 25px;}
-.btn-belcorp{height: 50px;border:0;border-radius: 25px;background: #0078e8;padding: 0;text-align: center;color: #fff;font-size: 21px;}
+.btn-belcorp{height: 50px;border:0;border-radius: 25px;background: #fe4251;padding: 0;text-align: center;color: #fff;font-size: 21px;}
 .btn-belcorp:hover, .btn-belcorp:active, .btn-belcorp:focus{color: #fff;opacity: 0.9;}
 .inner-login form button{width: 100%;}
 /*Modal*/
@@ -183,6 +318,17 @@ p.m-text{font-size: 19px;color: #9b9b9b;margin-bottom: 20px;}
 .m-pedido-e .custon-on p:first-child{font-size: 30px;}
 .m-pedido-e .custon-on p:last-child{margin-bottom: 60px;}
 .m-pedido-e .modal-content{padding-top: 80px;}
+.cnt-productos-two>.row{margin-left: -8px;margin-right: -8px;}
+.cnt-productos-two>.row>.col-md-6{padding-left: 8px;padding-right: 8px;}
+.content-bloque{width: 50%;float: left;min-height: 350px;}
+.cnt-productos-one .item-product{padding: 0;}
+.cnt-productos-one .item-product .btn-belcorp{padding: 0 50px;}
+.cnt-productos-one .item-product figure{margin-right: 0;margin-left: 0px;margin-bottom: 0px;margin-top: 0px;}
+.cnt-productos-one .item-product figure a{min-height: 350px;}
+.cnt-productos-one .item-product figure a img{display: none;}
+.cnt-productos-one .item-product .b-prec{position: absolute;bottom: 20px;left: 20px;right: 20px;}
+.cnt-productos-one .first-bloque{padding: 20px;position: relative;float: right;}
+.cnt-productos-one .second-bloque{float: left;}
 /*search*/
 .search-custon{margin-right: 15px;position: relative;}
 .search-custon input{border: 1px solid #d8d8d8;padding-left: 40px;border-radius: 5px;width: 250px;margin-top: 15px;height: 40px;}
@@ -194,13 +340,18 @@ footer{background: #000;padding: 50px 0;}
 .bloque-f ul li{margin-bottom: 20px;}
 .bloque-f ul li a,.bloque-f ul li{display: block;color: #fff;font-size: 19px;font-family: "proxima_nova_thin", arial;}
 @media only screen and (max-width: 2000px){
-
+    .item-product .b-prec em{font-size: 12px;}
+    .item-product .btn-belcorp{padding: 0 30px;}
 }
 @media only screen and (max-width: 992px){
     /*Display none provicional*/
     .cnt-city{display: none;}
     .nav-search-f{display: none;}
     /**/
+    .item-product .b-prec em{font-size: 15px;}
+    .item-product .btn-belcorp{padding: 0 45px;}
+    .cnt-productos-one .item-product figure a{min-height: 300px;}
+    .content-bloque{min-height: 300px;}
 }
 @media only screen and (max-width: 768px){
     .bloque-f ul{text-align: center;margin-bottom: 30px;}
@@ -217,6 +368,12 @@ footer{background: #000;padding: 50px 0;}
     header nav{min-height: 50px!important;}
     .list-menu-m{display: block;}
     .user-list{display: none;}
+    .content-bloque{min-height: auto;}
+    .cnt-productos-one .first-bloque{float: left;width: 100%;}
+    .cnt-productos-one .second-bloque{float: left;width: 100%;}
+    .cnt-productos-one .item-product figure a{background: none;min-height: auto;}
+    .cnt-productos-one .item-product figure a img{display: block;}
+    .cnt-productos-one .item-product .b-prec{position: static;}
 }
 @media only screen and (max-width: 600px){
     .inner-login form{width: 100%;}
@@ -231,4 +388,11 @@ footer{background: #000;padding: 50px 0;}
     .line-v{margin-left: -15px;margin-right: -15px;}
     .list-change p{margin-bottom: 15px;padding-right: 0;}
     .list-change .btn-belcorp{position: static;margin-bottom: 20px;}
+    
+}
+@media only screen and (max-width: 400px){
+    .item-product .b-prec em{font-size: 12px;}
+    .item-product .b-prec em span{font-size: 16px;}
+    .item-product .btn-belcorp{padding: 0 30px;font-size: 14px;}
+    .cnt-productos-one .item-product .btn-belcorp{padding: 0 30px;}
 }
