--- a/css/style.css
+++ b/css/style.css
@@ -354,9 +354,9 @@ footer{background: #000;padding: 50px 0;}
     .content-bloque{min-height: 300px;}
 }
 @media only screen and (max-width: 768px){
-    .bloque-f ul{text-align: center;margin-bottom: 30px;}
+    .bloque-f ul{margin-bottom: 30px;}
     .bloque-f ul li{margin-bottom: 10px;}
-    .bloque-f h4{text-align: center;}
+    .bloque-f h4{}
     footer{padding: 50px 0 10px 0;}
     .item-cupon{width: 100%;}
     .body-cupon{width: 100%;}
